Agentforce/force-app/main/default/objects/Account_Summary__c/Account_Summary__c.object-meta.xml
<CustomObject>
    <description>AI-generated account summaries triggered by changes to Account, Opportunity, Lead, NPS, or Contract records</description>
    <label>Account Summary</label>
    <nameField>
        <displayFormat>ACCT-SUM-{000000}</displayFormat>
        <label>Account Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>