Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Summaries</relationshipLabel>
    <relationshipName>Account_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>