Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Account_Type_Current__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_Current__c</fullName>
    <label>Account Type Current</label>
    <length>255</length>
    <type>Text</type>
</CustomField>