Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Action_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Action_Recommendations__c</fullName>
    <label>Action Recommendations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>