Agentforce/force-app/main/default/objects/Account_Summary__c/fields/AI_Model_Version__c.field-meta.xml
<CustomField>
    <fullName>AI_Model_Version__c</fullName>
    <label>AI Model Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>