Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Churn_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Level__c</fullName>
    <label>Churn Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very High</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Very Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>