Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Created_By_Agentforce__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Agentforce__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Created By Agentforce</label>
    <type>Checkbox</type>
</CustomField>