Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Customer_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Health_Score__c</fullName>
    <label>Customer Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>