Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Data_Analysis_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Data_Analysis_Period_Start__c</fullName>
    <label>Data Analysis Period Start</label>
    <type>Date</type>
</CustomField>