Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Executive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary__c</fullName>
    <label>Executive Summary</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>