Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Generation_Status__c.field-meta.xml
<CustomField>
    <fullName>Generation_Status__c</fullName>
    <label>Generation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
                <default>true</default>
                <label>Processing</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Regenerated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>