Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Key_Topics__c.field-meta.xml
<CustomField>
    <fullName>Key_Topics__c</fullName>
    <label>Key Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Quality</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Contract Terms</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>