Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Opportunities_Identified__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Identified__c</fullName>
    <label>Opportunities Identified</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>