Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Summaries</relationshipLabel>
    <relationshipName>Account_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>