Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Prompt_Template_Used__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Template_Used__c</fullName>
    <label>Prompt Template Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>