Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Related_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Related_Contracts__c</fullName>
    <label>Related Contracts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>