Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Related_Leads__c.field-meta.xml
<CustomField>
    <fullName>Related_Leads__c</fullName>
    <label>Related Leads</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>