Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Related_NPS_Summary_Count__c.field-meta.xml
<CustomField>
    <fullName>Related_NPS_Summary_Count__c</fullName>
    <label>Related NPS Summary Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>