Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Related_NPS_Surveys__c.field-meta.xml
<CustomField>
    <fullName>Related_NPS_Surveys__c</fullName>
    <label>Related NPS Surveys</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>