Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Related_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunities__c</fullName>
    <label>Related Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>