Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Revenue_Impact_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Impact_Estimate__c</fullName>
    <label>Revenue Impact Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>