Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Summaries_Reviewed</relationshipName>
    <type>Lookup</type>
</CustomField>