Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Risk_Factors__c.field-meta.xml
<CustomField>
    <fullName>Risk_Factors__c</fullName>
    <label>Risk Factors</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>