Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Sentiment_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Analysis__c</fullName>
    <label>Sentiment Analysis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Improving</fullName>
            </value>
            <value>
                <fullName>Declining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>