Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Source_Data_Hash__c.field-meta.xml
<CustomField>
    <fullName>Source_Data_Hash__c</fullName>
    <externalId>true</externalId>
    <label>Source Data Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>