Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Summary_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Summary_Generation_Date__c</fullName>
    <label>Summary Generation Date</label>
    <type>DateTime</type>
</CustomField>