Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Summary_Language__c.field-meta.xml
<CustomField>
    <fullName>Summary_Language__c</fullName>
    <defaultValue>&quot;English&quot;</defaultValue>
    <label>Summary Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>