Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Summary_Type__c.field-meta.xml
<CustomField>
    <fullName>Summary_Type__c</fullName>
    <label>Summary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Type Change</fullName>
            </value>
            <value>
                <fullName>Opportunity Analysis</fullName>
            </value>
            <value>
                <fullName>Lead Conversion</fullName>
            </value>
            <value>
                <fullName>NPS Insights</fullName>
            </value>
            <value>
                <fullName>Contract Review</fullName>
            </value>
            <value>
                <fullName>Comprehensive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>