Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Trigger_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Trigger Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>