Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Trigger_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Record_Name__c</fullName>
    <label>Trigger Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>