Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Trigger_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Record_Type__c</fullName>
    <label>Trigger Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>