Agentforce/force-app/main/default/objects/Account_Summary__c/fields/Upsell_Opportunity_Score__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Opportunity_Score__c</fullName>
    <label>Upsell Opportunity Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>